--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,8 @@
+<dependencies>
 <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-csv -->
 <dependency>
     <groupId>com.fasterxml.jackson.dataformat</groupId>
     <artifactId>jackson-dataformat-csv</artifactId>
     <version>2.15.1</version>
 </dependency>
+</dependencies>
